--- a/dacha-project/index.html
+++ b/dacha-project/index.html
@@ -21,12 +21,12 @@
                 </div>
                 <div class="header__contacts">
                     <div class="header__socials">
-                        <a href="#" class="header__social header__social_wa">
+                        <a href="https://api.whatsapp.com/send?phone=79774728229" target="_blank" class="header__social header__social_wa">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m13.33 18.076c4.05.964 5.475-2.5 4.761-3.793-.286-.516-2.856-1.507-2.981-1.555-1.104-.402-1.512.348-2.277 1.335-1.469-.735-2.454-1.314-3.466-2.96.057-.071.133-.155.19-.219.354-.396 1.017-1.134.565-2.037-.38-.757-.569-1.285-.708-1.672-.403-1.121-.71-1.425-2.098-1.425-1.445 0-2.566 1.899-2.566 3.534 0 3.569 4.798 7.889 8.58 8.792zm-6.014-10.826c.3 0 .452.01.528.022.162.343.326 1.059.93 2.173-.094.351-1.429 1.174-.81 2.238 1.265 2.148 2.531 2.893 4.345 3.795 1.208.546 1.594-.443 2.36-1.312.355.144 1.553.674 2.079.94-.047 1.036-1.047 1.992-3.07 1.51-3.472-.829-7.429-4.735-7.429-7.333.001-.988.694-2.033 1.067-2.033z"/><path d="m.083 23.085c-.131.474.224.949.723.949.18 0-.114.046 5.848-1.5 2.427 1.236 4.272 1.197 5.45 1.308 10.555 0 15.725-12.873 8.461-20.363-9.957-9.624-25.464 2.336-18.975 14.127zm19.288-18.672c.173.316 5.135 4.791 2.372 11.478-1.701 4.12-5.626 6.659-10.024 6.421-3.578-.199-4.504-1.477-5.163-1.302l-4.683 1.22 1.245-4.524c.054-.194.027-.401-.073-.575-5.983-10.324 7.546-20.939 16.326-12.718z"/>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_vi">
+                        <a href="https://viber.click/9774728229" target="_blank" class="header__social header__social_vi">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"x="0px" y="0px" viewBox="0 0 52.511 52.511" xml:space="preserve">
                                 <g>
                                     <path d="M31.256,0H21.254C10.778,0,2.255,8.521,2.255,18.995v9.01c0,7.8,4.793,14.81,12,17.665v5.841    c0,0.396,0.233,0.754,0.595,0.914c0.13,0.058,0.268,0.086,0.405,0.086c0.243,0,0.484-0.089,0.671-0.259L21.725,47h9.531    c10.476,0,18.999-8.521,18.999-18.995v-9.01C50.255,8.521,41.732,0,31.256,0z M48.255,28.005C48.255,37.376,40.63,45,31.256,45    h-9.917c-0.248,0-0.487,0.092-0.671,0.259l-4.413,3.997v-4.279c0-0.424-0.267-0.802-0.667-0.942    C8.81,41.638,4.255,35.196,4.255,28.005v-9.01C4.255,9.624,11.881,2,21.254,2h10.002c9.374,0,16.999,7.624,16.999,16.995V28.005z"/>
@@ -37,7 +37,7 @@
                                 </g>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_tg">
+                        <a href="tg://resolve?domain=Samsonovoleg" target="_blank" class="header__social header__social_tg">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z"/>
                             </svg>
@@ -280,7 +280,7 @@
                             <input type="text" class="count__input" placeholder="Введите ваше имя">
                             <input type="tel" class="count__input" placeholder="Введите номер телефона">
                             <button class="button button_count">ПОЛУЧИТЬ ПРОЕКТ И РАСЧЕТ СТОИМОСТИ</button>
-                            <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="#">политикой конфиденциальности</a></span>
+                            <span class="count__agreement">Нажимая на кнопку, вы соглашаетесь с <a href="./policy.pdf" target="_blank">политикой конфиденциальности</a></span>
                         </form>
                     </div>
                 </div>
@@ -1541,12 +1541,12 @@
                         <a href="#" class="header__recall">заказать звонок</a>
                     </div>
                     <div class="header__socials">
-                        <a href="#" class="header__social header__social_wa">
+                        <a href="https://api.whatsapp.com/send?phone=79774728229" target="_blank" class="header__social header__social_wa">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m13.33 18.076c4.05.964 5.475-2.5 4.761-3.793-.286-.516-2.856-1.507-2.981-1.555-1.104-.402-1.512.348-2.277 1.335-1.469-.735-2.454-1.314-3.466-2.96.057-.071.133-.155.19-.219.354-.396 1.017-1.134.565-2.037-.38-.757-.569-1.285-.708-1.672-.403-1.121-.71-1.425-2.098-1.425-1.445 0-2.566 1.899-2.566 3.534 0 3.569 4.798 7.889 8.58 8.792zm-6.014-10.826c.3 0 .452.01.528.022.162.343.326 1.059.93 2.173-.094.351-1.429 1.174-.81 2.238 1.265 2.148 2.531 2.893 4.345 3.795 1.208.546 1.594-.443 2.36-1.312.355.144 1.553.674 2.079.94-.047 1.036-1.047 1.992-3.07 1.51-3.472-.829-7.429-4.735-7.429-7.333.001-.988.694-2.033 1.067-2.033z"/><path d="m.083 23.085c-.131.474.224.949.723.949.18 0-.114.046 5.848-1.5 2.427 1.236 4.272 1.197 5.45 1.308 10.555 0 15.725-12.873 8.461-20.363-9.957-9.624-25.464 2.336-18.975 14.127zm19.288-18.672c.173.316 5.135 4.791 2.372 11.478-1.701 4.12-5.626 6.659-10.024 6.421-3.578-.199-4.504-1.477-5.163-1.302l-4.683 1.22 1.245-4.524c.054-.194.027-.401-.073-.575-5.983-10.324 7.546-20.939 16.326-12.718z"/>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_vi">
+                        <a href="https://viber.click/9774728229" target="_blank" class="header__social header__social_vi">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"x="0px" y="0px" viewBox="0 0 52.511 52.511" xml:space="preserve">
                                 <g>
                                     <path d="M31.256,0H21.254C10.778,0,2.255,8.521,2.255,18.995v9.01c0,7.8,4.793,14.81,12,17.665v5.841    c0,0.396,0.233,0.754,0.595,0.914c0.13,0.058,0.268,0.086,0.405,0.086c0.243,0,0.484-0.089,0.671-0.259L21.725,47h9.531    c10.476,0,18.999-8.521,18.999-18.995v-9.01C50.255,8.521,41.732,0,31.256,0z M48.255,28.005C48.255,37.376,40.63,45,31.256,45    h-9.917c-0.248,0-0.487,0.092-0.671,0.259l-4.413,3.997v-4.279c0-0.424-0.267-0.802-0.667-0.942    C8.81,41.638,4.255,35.196,4.255,28.005v-9.01C4.255,9.624,11.881,2,21.254,2h10.002c9.374,0,16.999,7.624,16.999,16.995V28.005z"/>
@@ -1557,7 +1557,7 @@
                                 </g>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_tg">
+                        <a href="tg://resolve?domain=Samsonovoleg" target="_blank" class="header__social header__social_tg">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z"/>
                             </svg>
@@ -1608,12 +1608,12 @@
                 </div>
                 <div class="header__contacts">
                     <div class="header__socials">
-                        <a href="#" class="header__social header__social_wa">
+                        <a href="https://api.whatsapp.com/send?phone=79774728229" target="_blank" class="header__social header__social_wa">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m13.33 18.076c4.05.964 5.475-2.5 4.761-3.793-.286-.516-2.856-1.507-2.981-1.555-1.104-.402-1.512.348-2.277 1.335-1.469-.735-2.454-1.314-3.466-2.96.057-.071.133-.155.19-.219.354-.396 1.017-1.134.565-2.037-.38-.757-.569-1.285-.708-1.672-.403-1.121-.71-1.425-2.098-1.425-1.445 0-2.566 1.899-2.566 3.534 0 3.569 4.798 7.889 8.58 8.792zm-6.014-10.826c.3 0 .452.01.528.022.162.343.326 1.059.93 2.173-.094.351-1.429 1.174-.81 2.238 1.265 2.148 2.531 2.893 4.345 3.795 1.208.546 1.594-.443 2.36-1.312.355.144 1.553.674 2.079.94-.047 1.036-1.047 1.992-3.07 1.51-3.472-.829-7.429-4.735-7.429-7.333.001-.988.694-2.033 1.067-2.033z"/><path d="m.083 23.085c-.131.474.224.949.723.949.18 0-.114.046 5.848-1.5 2.427 1.236 4.272 1.197 5.45 1.308 10.555 0 15.725-12.873 8.461-20.363-9.957-9.624-25.464 2.336-18.975 14.127zm19.288-18.672c.173.316 5.135 4.791 2.372 11.478-1.701 4.12-5.626 6.659-10.024 6.421-3.578-.199-4.504-1.477-5.163-1.302l-4.683 1.22 1.245-4.524c.054-.194.027-.401-.073-.575-5.983-10.324 7.546-20.939 16.326-12.718z"/>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_vi">
+                        <a href="https://viber.click/9774728229" target="_blank" class="header__social header__social_vi">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"x="0px" y="0px" viewBox="0 0 52.511 52.511" xml:space="preserve">
                                 <g>
                                     <path d="M31.256,0H21.254C10.778,0,2.255,8.521,2.255,18.995v9.01c0,7.8,4.793,14.81,12,17.665v5.841    c0,0.396,0.233,0.754,0.595,0.914c0.13,0.058,0.268,0.086,0.405,0.086c0.243,0,0.484-0.089,0.671-0.259L21.725,47h9.531    c10.476,0,18.999-8.521,18.999-18.995v-9.01C50.255,8.521,41.732,0,31.256,0z M48.255,28.005C48.255,37.376,40.63,45,31.256,45    h-9.917c-0.248,0-0.487,0.092-0.671,0.259l-4.413,3.997v-4.279c0-0.424-0.267-0.802-0.667-0.942    C8.81,41.638,4.255,35.196,4.255,28.005v-9.01C4.255,9.624,11.881,2,21.254,2h10.002c9.374,0,16.999,7.624,16.999,16.995V28.005z"/>
@@ -1624,7 +1624,7 @@
                                 </g>
                             </svg>
                         </a>
-                        <a href="#" class="header__social header__social_tg">
+                        <a href="tg://resolve?domain=Samsonovoleg" target="_blank" class="header__social header__social_tg">
                             <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" viewBox="0 0 24 24">
                                 <path d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z"/>
                             </svg>
@@ -1657,8 +1657,8 @@
                 </div>
                 <div class="footer__col">
                     <button class="button button_portfolio">заказать звонок</button>
-                    <a href="#" class="footer__text">Политика конфиденциальности</a>
-                    <a href="#" class="footer__text">Разработчик</a>
+                    <a href="./policy.pdf" target="_blank" class="footer__text">Политика конфиденциальности</a>
+                    <a href="https://vk.com/r_faizullin" class="footer__text">Разработчик</a>
                 </div>
             </div>
         </div>
