--- a/pool-spa/order.html
+++ b/pool-spa/order.html
@@ -44,33 +44,33 @@
                                 <button class="button nav__link js-categories-trigger"><span></span> Каталог</button>
                                 <ul class="categories js-categories">
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Гидромассажные СПА бассейны</a>
+                                        <a href="./catalog.html" class="categories__link">Гидромассажные СПА бассейны</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Переливные и коммерческие</a>
+                                        <a href="./catalog.html" class="categories__link">Переливные и коммерческие</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">СПА из нержавеющей стали</a>
+                                        <a href="./catalog.html" class="categories__link">СПА из нержавеющей стали</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Плавательные СПА с противотоком</a>
+                                        <a href="./catalog.html" class="categories__link">Плавательные СПА с противотоком</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Велнес комплекс Jacuzzi® SASHA</a>
+                                        <a href="./catalog.html" class="categories__link">Велнес комплекс Jacuzzi® SASHA</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Душ впечатлений</a>
+                                        <a href="./catalog.html" class="categories__link">Душ впечатлений</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Флотарии (флоат камеры)</a>
+                                        <a href="./catalog.html" class="categories__link">Флотарии (флоат камеры)</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Аксессуары для СПА</a>
+                                        <a href="./catalog.html" class="categories__link">Аксессуары для СПА</a>
                                     </li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Химия для СПА</a></li>
+                                        <a href="./catalog.html" class="categories__link">Химия для СПА</a></li>
                                     <li class="categories__item">
-                                        <a href="#" class="categories__link">Запчасти для СПА</a>
+                                        <a href="./catalog.html" class="categories__link">Запчасти для СПА</a>
                                     </li>
                                 </ul>
                             </li>
@@ -88,23 +88,126 @@
                             </li>
                             <li class="nav__separator"></li>
                             <li class="nav__item">
-                                <a href="#" class="nav__link">Контакты</a>
+                                <a href="./contacts.html" class="nav__link">Контакты</a>
                             </li>
                         </ul>
                     </nav>
-                    <div class="search">
-                        <input type="search" class="search__input">
-                        <button class="button search__button"></button>
-                    </div>
+                    <form class="search">
+                        <input type="text" class="search__input" name="search">
+                        <button type="submit" class="button search__button search__button_search">
+                            <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="57px" height="57px" version="1.1" viewBox="0 0 7.565 7.565" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path d="M7.473 7.027l-2.152 -2.151c0.417,-0.515 0.668,-1.169 0.668,-1.882 0,-1.651 -1.343,-2.994 -2.995,-2.994 -1.651,0 -2.994,1.343 -2.994,2.994 0,1.652 1.343,2.995 2.994,2.995 0.713,0 1.367,-0.251 1.882,-0.668l2.151 2.152c0.061,0.061 0.142,0.092 0.223,0.092 0.08,0 0.161,-0.031 0.223,-0.092 0.123,-0.124 0.123,-0.323 0,-0.446zm-4.479 -1.668c-1.303,0 -2.364,-1.061 -2.364,-2.365 0,-1.303 1.061,-2.364 2.364,-2.364 1.304,0 2.365,1.061 2.365,2.364 0,1.304 -1.061,2.365 -2.365,2.365z"/>
+                            </svg>
+                        </button>
+                        <button type="button" class="button search__button js-search-button">
+                            <svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" width="57px" height="57px" version="1.1" viewBox="0 0 7.565 7.565" xmlns:xlink="http://www.w3.org/1999/xlink">
+                                <path d="M7.473 7.027l-2.152 -2.151c0.417,-0.515 0.668,-1.169 0.668,-1.882 0,-1.651 -1.343,-2.994 -2.995,-2.994 -1.651,0 -2.994,1.343 -2.994,2.994 0,1.652 1.343,2.995 2.994,2.995 0.713,0 1.367,-0.251 1.882,-0.668l2.151 2.152c0.061,0.061 0.142,0.092 0.223,0.092 0.08,0 0.161,-0.031 0.223,-0.092 0.123,-0.124 0.123,-0.323 0,-0.446zm-4.479 -1.668c-1.303,0 -2.364,-1.061 -2.364,-2.365 0,-1.303 1.061,-2.364 2.364,-2.364 1.304,0 2.365,1.061 2.365,2.364 0,1.304 -1.061,2.365 -2.365,2.365z"/>
+                            </svg>
+                        </button>
+                    </form>
                     <div class="header__buttons">
-                        <button class="button header__button" data-val="2"><img src="./img/svg/bar-chart.svg" alt="Иконка">Сравнить</button>
-                        <button class="button header__button" data-val="12"><img src="./img/svg/shopping-cart.svg" alt="Иконка">Корзина</button>
+                        <a href="./compare.html" class="button header__button" data-val="2">
+                            <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" xml:space="preserve">
+                                <path d="M376,0v482h-60V121H196v361h-60V241H16c0,11.139,0,259.288,0,271c12.137,0,476.706,0,480,0c0-2.645,0-489.223,0-512H376z M106,482H46V271h60V482z M286,482h-60V151h60V482z M466,482h-60V30h60V482z"/>
+                            </svg>
+                            Сравнить
+                        </a>
+                        <a href="./cart.html" class="button header__button" data-val="12">
+                            <svg height="512pt" viewBox="0 -31 512.00026 512" width="512pt" xmlns="http://www.w3.org/2000/svg">
+                                <path d="m164.960938 300.003906h.023437c.019531 0 .039063-.003906.058594-.003906h271.957031c6.695312 0 12.582031-4.441406 14.421875-10.878906l60-210c1.292969-4.527344.386719-9.394532-2.445313-13.152344-2.835937-3.757812-7.269531-5.96875-11.976562-5.96875h-366.632812l-10.722657-48.253906c-1.527343-6.863282-7.613281-11.746094-14.644531-11.746094h-90c-8.285156 0-15 6.714844-15 15s6.714844 15 15 15h77.96875c1.898438 8.550781 51.3125 230.917969 54.15625 243.710938-15.941406 6.929687-27.125 22.824218-27.125 41.289062 0 24.8125 20.1875 45 45 45h272c8.285156 0 15-6.714844 15-15s-6.714844-15-15-15h-272c-8.269531 0-15-6.730469-15-15 0-8.257812 6.707031-14.976562 14.960938-14.996094zm312.152343-210.003906-51.429687 180h-248.652344l-40-180zm0 0"/>
+                                <path d="m150 405c0 24.8125 20.1875 45 45 45s45-20.1875 45-45-20.1875-45-45-45-45 20.1875-45 45zm45-15c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/><path d="m362 405c0 24.8125 20.1875 45 45 45s45-20.1875 45-45-20.1875-45-45-45-45 20.1875-45 45zm45-15c8.269531 0 15 6.730469 15 15s-6.730469 15-15 15-15-6.730469-15-15 6.730469-15 15-15zm0 0"/>
+                            </svg>
+                            Корзина
+                        </a>
                     </div>
                     <button class="button burger js-menu"><span></span></button>
                 </div>
             </div>
         </div>
+        <div class="header__search js-search">
+            <div class="container">
+                <div class="header__search-wrap">
+                    <button type="button" class="button search__close"></button>
+                    <form class="search">
+                        <input type="text" class="search__input" name="search">
+                        <button type="submit" class="button search__button search__button_search"></button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </header>
+    <div class="menu js-menu-content">
+        <nav class="nav">
+            <ul class="categories">
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Гидромассажные СПА бассейны</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Переливные и коммерческие</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">СПА из нержавеющей стали</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Плавательные СПА с противотоком</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Велнес комплекс Jacuzzi® SASHA</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Душ впечатлений</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Флотарии (флоат камеры)</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Аксессуары для СПА</a>
+                </li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Химия для СПА</a></li>
+                <li class="categories__item">
+                    <a href="./catalog.html" class="categories__link">Запчасти для СПА</a>
+                </li>
+            </ul>
+            <ul class="nav__list">
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Сервис</a>
+                </li>
+                <li class="nav__separator"></li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">Партнеры</a>
+                </li>
+                <li class="nav__separator"></li>
+                <li class="nav__item">
+                    <a href="#" class="nav__link">О нас</a>
+                </li>
+                <li class="nav__separator"></li>
+                <li class="nav__item">
+                    <a href="./contacts.html" class="nav__link">Контакты</a>
+                </li>
+            </ul>
+        </nav>
+        <div class="menu__bottom">
+            <div class="menu__bottom-content">
+                <a href="#" target="_blank" class="text_white header__map">Салон-бутик: Центр дизайна ArtPlay, г. Москва, ул. Нижняя Сыромятническая, 10</a>
+                <a href="tel:+74957262067" class="text_white header__tel">+7 (495) 726-20-67</a>
+                <button class="button button_recall js-open-popup-recall">заказать звонок</button>
+                <div class="header__top-social">
+                    <a href="#" class="header__social">
+                        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 308 308" xml:space="preserve" fill="white">
+                            <path d="M227.904,176.981c-0.6-0.288-23.054-11.345-27.044-12.781c-1.629-0.585-3.374-1.156-5.23-1.156 c-3.032,0-5.579,1.511-7.563,4.479c-2.243,3.334-9.033,11.271-11.131,13.642c-0.274,0.313-0.648,0.687-0.872,0.687 c-0.201,0-3.676-1.431-4.728-1.888c-24.087-10.463-42.37-35.624-44.877-39.867c-0.358-0.61-0.373-0.887-0.376-0.887 c0.088-0.323,0.898-1.135,1.316-1.554c1.223-1.21,2.548-2.805,3.83-4.348c0.607-0.731,1.215-1.463,1.812-2.153 c1.86-2.164,2.688-3.844,3.648-5.79l0.503-1.011c2.344-4.657,0.342-8.587-0.305-9.856c-0.531-1.062-10.012-23.944-11.02-26.348 c-2.424-5.801-5.627-8.502-10.078-8.502c-0.413,0,0,0-1.732,0.073c-2.109,0.089-13.594,1.601-18.672,4.802 c-5.385,3.395-14.495,14.217-14.495,33.249c0,17.129,10.87,33.302,15.537,39.453c0.116,0.155,0.329,0.47,0.638,0.922 c17.873,26.102,40.154,45.446,62.741,54.469c21.745,8.686,32.042,9.69,37.896,9.69c0.001,0,0.001,0,0.001,0 c2.46,0,4.429-0.193,6.166-0.364l1.102-0.105c7.512-0.666,24.02-9.22,27.775-19.655c2.958-8.219,3.738-17.199,1.77-20.458 C233.168,179.508,230.845,178.393,227.904,176.981z"/>
+                            <path d="M156.734,0C73.318,0,5.454,67.354,5.454,150.143c0,26.777,7.166,52.988,20.741,75.928L0.212,302.716 c-0.484,1.429-0.124,3.009,0.933,4.085C1.908,307.58,2.943,308,4,308c0.405,0,0.813-0.061,1.211-0.188l79.92-25.396 c21.87,11.685,46.588,17.853,71.604,17.853C240.143,300.27,308,232.923,308,150.143C308,67.354,240.143,0,156.734,0z M156.734,268.994c-23.539,0-46.338-6.797-65.936-19.657c-0.659-0.433-1.424-0.655-2.194-0.655c-0.407,0-0.815,0.062-1.212,0.188 l-40.035,12.726l12.924-38.129c0.418-1.234,0.209-2.595-0.561-3.647c-14.924-20.392-22.813-44.485-22.813-69.677 c0-65.543,53.754-118.867,119.826-118.867c66.064,0,119.812,53.324,119.812,118.867 C276.546,215.678,222.799,268.994,156.734,268.994z"/>
+                        </svg>
+                    </a>
+                    <a href="#" class="header__social">
+                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="white">
+                            <path d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z"/>
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
     <main class="main">
         <section class="order section_grey">
             <div class="breadcrumbs">
