--- a/zillion/about.html
+++ b/zillion/about.html
@@ -9,9 +9,9 @@
     <script src="./js/main.js" defer></script>
 </head>
 <body class="body_white js-page-identifier" data-page="about">
-    <div class="preloader">
+    <!-- <div class="preloader">
         <div class="preloader__loader"></div>
-    </div>
+    </div> -->
     <header class="header">
         <div class="container">
             <div class="header__wrap">
