--- a/4seasons/index.html
+++ b/4seasons/index.html
@@ -91,8 +91,8 @@
                         <p class="about__text">В Новый год мы предлагаем вам специальную программу - 3 дня проживания - всё включено, новогодний бал с шоу программой и различные активности на свежем воздухе.</p>
                         <div class="about__socials">
                             <a href="https://www.facebook.com/club4s" target="_blank" class="about__link">
-                                <svg class="about__ico">
-                                    <use xlink:href="./img/icons.svg#facebook"></use>
+                                <svg class="about__ico" viewBox="0 0 24 24">
+                                    <path d="m15.997 3.985h2.191v-3.816c-.378-.052-1.678-.169-3.192-.169-3.159 0-5.323 1.987-5.323 5.639v3.361h-3.486v4.266h3.486v10.734h4.274v-10.733h3.345l.531-4.266h-3.877v-2.939c.001-1.233.333-2.077 2.051-2.077z"/>
                                 </svg>
                             </a>
                             <a href="https://instagram.com/club4s?igshid=yvu0zcnj538h" target="_blank" class="about__link">
@@ -116,8 +116,8 @@
                                 </svg>
                             </a>
                             <a href="https://vk.com/club4s" target="_blank" class="about__link">
-                                <svg class="about__ico">
-                                    <use xlink:href="./img/icons.svg#vk"></use>
+                                <svg class="about__ico" viewBox="0 0 24 24">
+                                    <path d="m19.915 13.028c-.388-.49-.277-.708 0-1.146.005-.005 3.208-4.431 3.538-5.932l.002-.001c.164-.547 0-.949-.793-.949h-2.624c-.668 0-.976.345-1.141.731 0 0-1.336 3.198-3.226 5.271-.61.599-.892.791-1.225.791-.164 0-.419-.192-.419-.739v-5.105c0-.656-.187-.949-.74-.949h-4.126c-.419 0-.668.306-.668.591 0 .622.945.765 1.043 2.515v3.797c0 .832-.151.985-.486.985-.892 0-3.057-3.211-4.34-6.886-.259-.713-.512-1.001-1.185-1.001h-2.625c-.749 0-.9.345-.9.731 0 .682.892 4.073 4.148 8.553 2.17 3.058 5.226 4.715 8.006 4.715 1.671 0 1.875-.368 1.875-1.001 0-2.922-.151-3.198.686-3.198.388 0 1.056.192 2.616 1.667 1.783 1.749 2.076 2.532 3.074 2.532h2.624c.748 0 1.127-.368.909-1.094-.499-1.527-3.871-4.668-4.023-4.878z"/>
                                 </svg>
                             </a>
                         </div>
@@ -348,6 +348,8 @@
 
     <div class="swiper swiper__main js-slider-main">
         <button class="swiper__close js-gallery-close"></button>
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
                 <img loading="lazy" class="swiper__img swiper-lazy" data-src="./img/main-slider/main-slider_1.jpg" alt="">
@@ -465,6 +467,8 @@
     </div>
 
     <div class="swiper swiper__main js-slider-1">
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <button class="swiper__close js-gallery-close"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
@@ -491,6 +495,8 @@
     </div>
 
     <div class="swiper swiper__main js-slider-2">
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <button class="swiper__close js-gallery-close"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
@@ -529,6 +535,8 @@
     </div>
 
     <div class="swiper swiper__main js-slider-3">
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <button class="swiper__close js-gallery-close"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
@@ -575,6 +583,8 @@
     </div>
 
     <div class="swiper swiper__main js-slider-4">
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <button class="swiper__close js-gallery-close"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
@@ -621,6 +631,8 @@
     </div>
 
     <div class="swiper swiper__main js-slider-5">
+        <button class="swiper__control swiper__control_prev"></button>
+        <button class="swiper__control swiper__control_next"></button>
         <button class="swiper__close js-gallery-close"></button>
         <div class="swiper-wrapper">
             <div class="swiper-slide swiper__item">
