--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -8,7 +8,16 @@
     <title>FUJIFILM X-S10</title>
 </head>
 <body>
-    
+    <header class="header">
+        
+    </header>
+    <main class="main">
+
+    </main>
+    <footer class="footer">
+
+    </footer>
+
     <script src="./js/jQuery.min.js"></script>
 </body>
 </html>
